--- a/html/index.html
+++ b/html/index.html
@@ -16,10 +16,13 @@
   </header>
     <main>
       <div class="board-game">
-        
+
+
+
       </div>
     </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../js/cardsName.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
 </body>
 </html>
