--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,25 +11,38 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css">
   <title>Memory Game</title>
 </head>
+
 <body>
   <header>
     <div class="game-title">
-        <h1>Jeu de mémoire</h1>
+      <h1>Jeu de mémoire</h1>
     </div>
   </header>
-    <main>
-      <div class="board-game">
-      </div>
-    </main>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar"
-       style="width: 100%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
+  <main>
+    <div class="board-game">
     </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  </main>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
+  </div>
+  <!-- modal box -->
+  <div id="win-message" title="You Win!">
+    <p>
+      <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;">
+      </span> Guess what?.
+    </p>
+    <p>
+      You are <b>awesome</b>. You win!
+    </p>
+    <!-- <button type="button" class="ui-button ui-corner-all ui-widget">Ok</button> -->
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../js/cardsName.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
 </body>
+
 </html>
