--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,21 @@
     <!-- <button type="button" class="ui-button ui-corner-all ui-widget">Ok</button> -->
   </div>
 
+  <div class="score-div">
+    <table class="score-tab">
+      <tr>
+        <th>Parties</th>
+        <th>Gagnée(s)</th>
+        <th>Perdue(s)</th>
+      </tr>
+      <tr>
+        <td id="scoreTotal"></td>
+        <td id="scoreWin"></td>
+        <td id="scoreLose"></td>
+      </tr>
+    </table>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
