--- a/html/index.html
+++ b/html/index.html
@@ -15,35 +15,24 @@
 <body>
   <header>
     <div class="game-title">
-      <h1>Jeu de mémoire</h1>
+      <h1>Memory Game</h1>
+      <h3>Jeu de mémoire</h3>
     </div>
   </header>
   <main>
-    <!-- Nice Try you sneaky!   -->
+    <!-- Nice Try You Sneaky!   -->
     <div class="board-game">
     </div>
   </main>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
   </div>
-  <!-- modal box -->
-  <div id="win-message" title="You Win!">
-    <p>
-      <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;">
-      </span> Guess what?.
-    </p>
-    <p>
-      You are <b>awesome</b>. You win!
-    </p>
-    <!-- <button type="button" class="ui-button ui-corner-all ui-widget">Ok</button> -->
-  </div>
-
   <div class="score-div">
     <table class="score-tab">
       <tr>
-        <th>Parties</th>
-        <th>Gagnée(s)</th>
-        <th>Perdue(s)</th>
+        <th>Game(s)</th>
+        <th>Win(s)</th>
+        <th>Lose(s)</th>
       </tr>
       <tr>
         <td id="scoreTotal"></td>
@@ -52,7 +41,6 @@
       </tr>
     </table>
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
